docker begin + readme
